src/index.css
/* ... */
@keyframes unblur {
  100% {
    filter: blur(0);
  }
}

/* Classes -------------------------------------------------------------------------- */

.classesRock {
  /* display: flex; */
  z-index: -1;
  max-width: 1260px;
  max-height: 1240px;
  position: absolute;
  margin-top: 18rem;
  overflow: hidden;
}

.cardContainer {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem 6.2rem;
  justify-content: center;
  margin: 1rem 0 6rem 0;
}

.card-deck {
  margin: 0 0 3rem;
}

.card {
  width: 448px;
  height: 500px;
  /* margin: 0 3rem; */
  perspective: 1000px;
}

.card-inner {
  position: relative;
  height: 100%;
  width: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.card-inner:hover {
  transform: rotateY(-180deg)
}

.imgWrap {
  height: 100%;
  width: 100%;
}

.card-front, .card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
}

.card-back {
  transform: rotateY(180deg);
  background: rgba(0, 0, 0, 0.5);
}

.overlay {
  display:flex;
  flex-direction: column;
  position: absolute;
  color: white;
  text-align: center;
  /* justify-content: center; */
  justify-content: space-evenly;
  top: 0;
}

.book {
  position: absolute;
  text-transform: uppercase;
  padding: .5rem 1rem;
  bottom: 5%;
  left: 5%;
  cursor: pointer;
}

.book :hover {
  transition-delay: 250ms;
  transition-property: all ease-in-out;
}
/* come back to this */

.adjectives {
  display: flex;
  justify-content: space-between;
  font-size: 25px;
  opacity: .35;
  padding-top: 0.5rem;
  cursor: default;
}

.classType {
  font-size: 50px;
  color:#2f4636;
  cursor: default;
}

/* Reviews ------------------------------------------------------------------ */

.reviewsRock {
  display: flex;
  z-index: -1;
  max-width: 810px;
  max-height: 490px;
  position: absolute;
}

.portals {
  display: flex;
  align-content: center;
  cursor: pointer;
}

.portals .pButton{
  display: flex;
  flex-wrap: wrap;
  margin: 0 3rem;
  background-color: #3E5C47;
  border-radius: 400px;
  transition: all .4s ease-in-out;
  cursor: pointer;
  align-content: center;
  justify-content: center;
  min-width: 228px;
  min-height: 290px;
}

.portals .pButton:hover {
  transform: translateY(-3rem);
  opacity: 75%;
  color: white;
}

.reviews {
  display: flex;
  background-color: rgba(148, 153, 120, 20%);
  padding: 2rem;
  margin: 15rem 5rem 3rem;
  position: relative;
}

.review-Logo {
  background-color: #949978;
  height: 10rem;
  max-width: 5rem;
  border-start-end-radius: 45%;
}

.social-icon {
  background-color: #D4CFC9;
  border-radius: 50%;
}

/* Booking ------------------------------------------------------------------------------------------------------ */

/* Calendar */
.calendar-container {
  width: 800px;
  border: solid 2px #949978;
  border-radius: 40px;
}

.calendar-container header {
  display: flex;
  align-items: center;
  padding: 25px 30px 10px;
  border-radius: 40px 40px 0 0;
  justify-content: space-between;
  background: #D4CFC9;
}

header .calendar-navigation {
  display: flex;
}

header .button-space {
  background:#f36943; 
  line-height: 2rem;
  border-radius: 400px;
  margin: 0 10px;
  width: 60px;
}

header .calendar-navigation span {
  display: flex;
  flex-wrap: wrap;
  height: 30px;
  align-content: center;
  justify-content: center;
  cursor: pointer;
  text-align: center;
  user-select: none;
  font-size: 1.9rem;
}

/* .calendar-navigation span:last-child {
  margin-right: -10px;
} */

/* header .calendar-navigation span:hover {
  opacity: 75%;
} */

header .calendar-current-date {
  font-weight: 500;
  font-size: 1.45rem;
}

.calendar-body {
  padding: 20px;
  background: #D4CFC9;
  border-radius: 0 0 40px 40px;
}

.calendar-body ul {
  list-style: none;
  flex-wrap: wrap;
  display: flex;
  text-align: center;
}

.calendar-body .calendar-dates {
  margin-bottom: 20px;
}

.calendar-body li {
  width: calc(100% / 7);
  font-size: 1.07rem;
  color: #414141;
}

.calendar-body .calendar-weekdays li {
  cursor: default;
  font-weight: 500;
  color: #949978;
}

.calendar-body .calendar-dates li {
  padding: 15px 0;
  position: relative;
  z-index: 1;
  cursor: pointer;
}

.calendar-dates li.inactive {
  color: #aaa;
}

.calendar-dates li.active {
  color: #fff;
}

.calendar-dates li::before {
  position: absolute;
  content: "";
  z-index: -1;
  top: 50%;
  left: 50%;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  transform: translate(-50%, -50%);
}

.calendar-dates li.active::before {
  background: #ff8e43;;
}

.calendar-dates li:not(.active):hover::before {
  background: #e4e1e1;
}

/* Booking Body */

.schedule-details {
  background-color: #fff;
  color: #000;
  bottom: 0;
}

